objects/Client_Plan_Relationship_Item__c.object
<CustomObject>
    <fields>
        <fullName>Barclays_Contact_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Barclays Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Client_Plan_Relationship_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Barclays_Contact__c</fullName>
        <label>Barclays Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Plan_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Plan Relationship</label>
        <referenceTo>Client_Plan_Relationship__c</referenceTo>
        <relationshipLabel>Client Plan Relationship Items</relationshipLabel>
        <relationshipName>Client_Plan_Relationship_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Influence__c</fullName>
        <label>Influence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Strength_of_Relationship__c</fullName>
        <label>Strength of Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>At Risk</fullName>
                </value>
                <value>
                    <fullName>Introduction required</fullName>
                </value>
                <value>
                    <fullName>Good relationship, met a few times</fullName>
                </value>
                <value>
                    <fullName>Strong relationship, able to influence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Client Plan Relationship Item</label>
    <nameField>
        <displayFormat>CPRI{00000}</displayFormat>
        <label>Client Plan Relationship Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Plan Relationship Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>